@@ -1,3 +1,8 @@
+2010-11-19  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/Core.pm: Merged from trunk. Fixed regexp alerts. The
+	  patch to detect malformed regular expressions made them malfunction.
+
 2010-11-16  Ramon Novoa  <rnovoa@artica.es>
 
 	* lib/PandoraFMS/Core.pm: Merged from trunk. Decode HTML entities in
